--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -5,6 +6,50 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+ body {
+  background-color: lavender;
+ }
+
+.login {
+  background-color: lavender;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.login div {
+  display: flex;
+  justify-content: center;
+}
+
+.login h3 {
+  background-color: teal;
+  color: white;
+  box-shadow: -5px 5px 5px gray;
+  border: solid 2px black;
+  padding: 1rem;
+  margin: 2rem;
+  width: 300px;
+  text-align: center;
+}
+
+.login form {
+  box-shadow: -5px 5px 5px gray;
+  border: solid 2px black;
+  padding: 1rem;
+  margin: 3px;
+  width: 300px;
+  text-align: center
+}
+
+.navbar-brand {
+  font-weight: bolder;
+  color:white;
+}
+
+.nav-link {
+  color: white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -23,6 +68,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
 
 .App-link {
   color: #61dafb;
